--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(request,provider_anthropic)
 S3method(set_api_key,provider_anthropic)
 S3method(set_max_tokens,provider_anthropic)
 S3method(set_model,provider_anthropic)
+S3method(set_system_prompt,provider_anthropic)
 S3method(set_version,provider_anthropic)
 export(clear_messages)
 export(handle_response)
@@ -19,4 +20,5 @@ export(request)
 export(set_api_key)
 export(set_max_tokens)
 export(set_model)
+export(set_system_prompt)
 export(set_version)
