--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(request,provider_anthropic)
 S3method(set_api_key,provider_anthropic)
 S3method(set_max_tokens,provider_anthropic)
 S3method(set_model,provider_anthropic)
+S3method(set_retry,provider)
 S3method(set_system_prompt,provider_anthropic)
 S3method(set_version,provider_anthropic)
 export(add_tool)
