--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(set_max_tokens,provider_anthropic)
 S3method(set_model,provider_anthropic)
 S3method(set_retry,provider)
 S3method(set_system_prompt,provider_anthropic)
+S3method(set_temperature,provider_anthropic)
 S3method(set_version,provider_anthropic)
 export(add_tool)
 export(clear_messages)
@@ -27,4 +28,5 @@ export(set_api_key)
 export(set_max_tokens)
 export(set_model)
 export(set_system_prompt)
+export(set_temperature)
 export(set_version)
