feat(provider): functioning tool call for openai

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(add_tool,agent)
 S3method(handle_response,provider_anthropic)
 S3method(handle_response,provider_openai)
 S3method(handle_tool_use,provider_anthropic)
+S3method(handle_tool_use,provider_openai)
 S3method(mcp_to_provider_tools,provider_anthropic)
 S3method(mcp_to_provider_tools,provider_openai)
 S3method(register_agent,provider)
