--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(handle_tool_use,provider_anthropic)
 S3method(handle_tool_use,provider_openai)
 S3method(mcp_to_provider_tools,provider_anthropic)
 S3method(mcp_to_provider_tools,provider_openai)
+S3method(print,message)
 S3method(print,provider)
 S3method(register_mcp,agent)
 S3method(request,agent)
@@ -23,8 +24,10 @@ S3method(set_system_prompt,provider_openai)
 S3method(set_temperature,provider_anthropic)
 S3method(set_version,provider_anthropic)
 export(add_tool)
+export(append_message)
 export(clear_messages)
 export(handle_response)
+export(handle_tool_use)
 export(new_agent)
 export(new_anthropic)
 export(new_message)
