feat: methods on agents

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,18 @@ S3method(register_mcp,agent)
 S3method(request,agent)
 S3method(request,provider_anthropic)
 S3method(request,provider_openai)
+S3method(set_api_key,agent)
 S3method(set_api_key,provider)
+S3method(set_max_tokens,agent)
 S3method(set_max_tokens,provider)
+S3method(set_model,agent)
 S3method(set_model,provider)
+S3method(set_retry,agent)
 S3method(set_retry,provider)
+S3method(set_system_prompt,agent)
 S3method(set_system_prompt,provider_anthropic)
 S3method(set_system_prompt,provider_openai)
+S3method(set_temperature,agent)
 S3method(set_temperature,provider_anthropic)
 S3method(set_version,provider_anthropic)
 export(add_tool)
