--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 S3method(add_tool,agent)
 S3method(append_message,agent)
+S3method(execute,workflow)
+S3method(execute_step,agent_step)
+S3method(execute_step,function_step)
 S3method(get_messages,agent)
 S3method(handle_response,provider_anthropic)
 S3method(handle_response,provider_openai)
@@ -11,6 +14,9 @@ S3method(mcp_to_provider_tools,provider_anthropic)
 S3method(mcp_to_provider_tools,provider_openai)
 S3method(print,message)
 S3method(print,provider)
+S3method(print,workflow)
+S3method(print,workflow_step)
+S3method(print,workflow_when)
 S3method(register_mcp,agent)
 S3method(request,agent)
 S3method(request,provider_anthropic)
@@ -29,9 +35,13 @@ S3method(set_system_prompt,provider_openai)
 S3method(set_temperature,agent)
 S3method(set_temperature,provider_anthropic)
 S3method(set_version,provider_anthropic)
+S3method(step,"function")
+S3method(step,agent)
+export("%->%")
 export(add_tool)
 export(append_message)
 export(clear_messages)
+export(execute)
 export(handle_response)
 export(handle_tool_use)
 export(new_agent)
@@ -39,6 +49,7 @@ export(new_anthropic)
 export(new_message)
 export(new_openai)
 export(new_provider)
+export(new_workflow)
 export(register_mcp)
 export(request)
 export(set_api_key)
@@ -47,3 +58,5 @@ export(set_model)
 export(set_system_prompt)
 export(set_temperature)
 export(set_version)
+export(step)
+export(when)
