--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,7 @@
 pandoc: 3.1.3
 pkgdown: 2.1.2
 pkgdown_sha: ~
-articles: {}
-last_built: 2025-06-16T11:15Z
+articles:
+  get-started: get-started.html
+  mcp-integration: mcp-integration.html
+last_built: 2025-06-16T17:34Z
