--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,4 +4,5 @@ pkgdown_sha: ~
 articles:
   get-started: get-started.html
   mcp-integration: mcp-integration.html
-last_built: 2025-06-16T17:34Z
+  workflow-basics: workflow-basics.html
+last_built: 2025-06-16T17:36Z
