--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,7 +2,8 @@ pandoc: 3.1.3
 pkgdown: 2.1.2
 pkgdown_sha: ~
 articles:
+  advanced-workflows: advanced-workflows.html
   get-started: get-started.html
   mcp-integration: mcp-integration.html
   workflow-basics: workflow-basics.html
-last_built: 2025-06-16T17:36Z
+last_built: 2025-06-16T17:43Z
