--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 S3method(add_tool,agent)
 S3method(append_message,agent)
 S3method(execute,workflow)
+S3method(execute,workflow_when)
 S3method(execute_step,agent_step)
 S3method(execute_step,function_step)
+S3method(get_last_message,agent)
 S3method(get_messages,agent)
 S3method(handle_response,provider_anthropic)
 S3method(handle_response,provider_openai)
@@ -42,6 +44,8 @@ export(add_tool)
 export(append_message)
 export(clear_messages)
 export(execute)
+export(get_last_message)
+export(get_messages)
 export(handle_response)
 export(handle_tool_use)
 export(new_agent)
