--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,4 +6,7 @@ articles:
   get-started: get-started.html
   mcp-integration: mcp-integration.html
   workflow-basics: workflow-basics.html
-last_built: 2025-06-17T09:38Z
+last_built: 2025-06-17T10:03Z
+urls:
+  reference: https://llmr.opifex.org/reference
+  article: https://llmr.opifex.org/articles
