feat: new_agent takes also accepts callback

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ S3method(handle_tool_use,provider_anthropic)
 S3method(handle_tool_use,provider_openai)
 S3method(mcp_to_provider_tools,provider_anthropic)
 S3method(mcp_to_provider_tools,provider_openai)
+S3method(new_agent,"function")
+S3method(new_agent,provider)
 S3method(print,message)
 S3method(print,provider)
 S3method(print,workflow)
