docs: rebuild site

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ S3method(set_api_key,agent)
 S3method(set_api_key,provider)
 S3method(set_max_tokens,agent)
 S3method(set_max_tokens,provider)
+S3method(set_max_tool_calls,agent)
+S3method(set_max_tool_calls,provider)
 S3method(set_model,agent)
 S3method(set_model,provider)
 S3method(set_retry,agent)
@@ -48,8 +50,6 @@ export(clear_messages)
 export(execute)
 export(get_last_message)
 export(get_messages)
-export(handle_response)
-export(handle_tool_use)
 export(new_agent)
 export(new_anthropic)
 export(new_message)
@@ -60,6 +60,7 @@ export(register_mcp)
 export(request)
 export(set_api_key)
 export(set_max_tokens)
+export(set_max_tool_calls)
 export(set_model)
 export(set_system_prompt)
 export(set_temperature)
