fix: new_agent warning on factory creation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(handle_response,provider_anthropic)
 S3method(handle_response,provider_openai)
 S3method(handle_tool_use,provider_anthropic)
 S3method(handle_tool_use,provider_openai)
+S3method(increment_tool_calls,agent)
+S3method(increment_tool_calls,provider)
 S3method(mcp_to_provider_tools,provider_anthropic)
 S3method(mcp_to_provider_tools,provider_openai)
 S3method(new_agent,"function")
@@ -50,6 +52,7 @@ export(clear_messages)
 export(execute)
 export(get_last_message)
 export(get_messages)
+export(increment_tool_calls)
 export(new_agent)
 export(new_anthropic)
 export(new_message)
