--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports:
   httr2,
-  mcpr,
+  mcpr (>= 0.0.1.9000),
   yyjsonr
 Suggests:
   knitr,
