--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,14 +10,17 @@ S3method(execute_step,function_step)
 S3method(get_last_message,agent)
 S3method(get_messages,agent)
 S3method(handle_response,provider_anthropic)
+S3method(handle_response,provider_ellmer)
 S3method(handle_response,provider_openai)
 S3method(handle_tool_use,provider_anthropic)
+S3method(handle_tool_use,provider_ellmer)
 S3method(handle_tool_use,provider_openai)
 S3method(increment_tool_calls,agent)
 S3method(increment_tool_calls,provider)
 S3method(mcp_to_provider_tools,provider_anthropic)
 S3method(mcp_to_provider_tools,provider_openai)
 S3method(new_agent,"function")
+S3method(new_agent,Chat)
 S3method(new_agent,provider)
 S3method(print,message)
 S3method(print,provider)
@@ -27,23 +30,31 @@ S3method(print,workflow_when)
 S3method(register_mcp,agent)
 S3method(request,agent)
 S3method(request,provider_anthropic)
+S3method(request,provider_ellmer)
 S3method(request,provider_openai)
 S3method(set_api_key,agent)
 S3method(set_api_key,provider)
+S3method(set_api_key,provider_ellmer)
 S3method(set_max_tokens,agent)
 S3method(set_max_tokens,provider)
+S3method(set_max_tokens,provider_ellmer)
 S3method(set_max_tool_calls,agent)
 S3method(set_max_tool_calls,provider)
 S3method(set_model,agent)
 S3method(set_model,provider)
+S3method(set_model,provider_ellmer)
 S3method(set_retry,agent)
 S3method(set_retry,provider)
+S3method(set_retry,provider_ellmer)
 S3method(set_system_prompt,agent)
 S3method(set_system_prompt,provider_anthropic)
+S3method(set_system_prompt,provider_ellmer)
 S3method(set_system_prompt,provider_openai)
 S3method(set_temperature,agent)
 S3method(set_temperature,provider_anthropic)
+S3method(set_temperature,provider_ellmer)
 S3method(set_version,provider_anthropic)
+S3method(set_version,provider_ellmer)
 S3method(step,"function")
 S3method(step,agent)
 export("%->%")
