feat: init humand in the loop

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,25 +50,31 @@ S3method(step,agent)
 export("%->%")
 export(add_tool)
 export(append_message)
+export(batch_approval_interface)
 export(clear_messages)
+export(clear_tool_approvals)
 export(execute)
 export(get_last_message)
 export(get_messages)
 export(increment_tool_calls)
+export(list_tool_approvals)
 export(new_agent)
 export(new_anthropic)
 export(new_message)
 export(new_openai)
 export(new_provider)
 export(new_workflow)
+export(prompt_human_approval)
 export(register_mcp)
 export(request)
 export(set_api_key)
+export(set_approval_callback)
 export(set_max_tokens)
 export(set_max_tool_calls)
 export(set_model)
 export(set_system_prompt)
 export(set_temperature)
 export(set_version)
+export(smart_approval_callback)
 export(step)
 export(when)
